Fix overflow issues and integrate Formsubmit

--- a/src/index.css
+++ b/src/index.css
@@ -66,7 +66,7 @@ body {
 }
 
   .message {
-    width: 621px;
+    max-width: 100%;
     height: 190px;
     flex-shrink: 0;
     border-radius: 8px;
